--- a/index.html
+++ b/index.html
@@ -16,38 +16,16 @@
       <section class="wrapper-title">
           <p>Hi, My name is Thi</p>
           <p>I'm a developer</p>
-      </section>
-      <section class="wrapper-footer">
-          Scroll down to discovery
+
+          <button>ReactJS</button>
+          <button>Flutter</button>
+          <button>Angular</button>
+          <button>dotNET</button>
       </section>
   </header>
-  <section class="education">
-    <p class="education-title">Education</p>
-    <div class="schools-block">
-      <article class="schools">
-        <p class="schools-title">Cao Thang Technical College</p>
-        <p class="schools-major">Software Technology</p>
-      </article>
-      <article class="schools">
-        <p class="schools-title">Ho Chi Minh City University of Technology</p>
-        <p class="schools-major">Computer Science</p>
-      </article>
-    </div>
-  </section>
-  <section class="experience">
-      <article class="skills">Skills</article>
-      <article class="companies">Companies</article>
-  </section>
-  <section class="moreinfo">        
-    Address: <address>32/14-16 Tu Hai Street, Ward 6, Tan Binh District, HCMC</address>
-  </section>
-
   <script src="./js/particles.js"></script>
   <script src="./js/app.js"></script>
 
 </body>
 <noscript>Please turn on Javascript</noscript>
-<script>
-  
-</script>
 </html>
