--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
+<!--
+  ::::::::::::::  :::::     :::::   :::::
+  ::::::::::::::  :::::     :::::   :::::
+       ::::       :::::     :::::   :::::
+       ::::       :::::::::::::::   :::::
+       ::::       :::::     :::::   :::::
+       ::::       :::::     :::::   :::::
+       ::::       :::::     :::::   :::::
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/36a442f60c.js" crossorigin="anonymous"></script>
   <link rel="icon" href="./resources/favicon/logo-trungquandev-transparent-bg-256x256-ico.ico" sizes="16x16">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
-
-  <title>Web design tutorial</title>
-  <link rel="stylesheet" href="./style.css" type="text/css">
+  <link rel="stylesheet" href="./assets/stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="./assets/style.css" type="text/css">
+  <title>Portfolio</title>
 </head>
 <body>
   <header class="wrapper" id="particles-js">
       <section class="wrapper-title">
           <p>Hi, My name is Thi</p>
           <p>I'm a developer</p>
-
-          <button>ReactJS</button>
-          <button>Flutter</button>
-          <button>Angular</button>
-          <button>dotNET</button>
+          <a id="flutter-button" href="https://github.com/noranekoo?tab=repositories"><i class="fa-brands fa-github"></i> noranekoo</a>
+          <a id="flutter-button" href="tel:0965735177"><i class="fa-solid fa-phone"></i></i> 0965735177</a>
+          <a id="flutter-button" href="https://www.facebook.com/noranek0o/"><i class="fa-brands fa-facebook"></i> Nguyễn Anh Thi</a>
       </section>
   </header>
-  <script src="./js/particles.js"></script>
-  <script src="./js/app.js"></script>
+  <script src="./assets/js/particles.js"></script>
+  <script src="./assets/js/app.js"></script>
 
 </body>
 <noscript>Please turn on Javascript</noscript>
